--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -6,6 +6,8 @@
         <file>sounds/win.wav</file>
         <file>icons/bomb_light.png</file>
         <file>icons/bomb_dark.png</file>
+        <file>icons/questionmark_light.png</file>
+        <file>icons/questionmark_dark.png</file>
         <file>icons/flag.png</file>
         <file>icons/icon.png</file>
     </qresource>
