--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -8,6 +8,14 @@
         <file>icons/bomb_dark.png</file>
         <file>icons/questionmark_light.png</file>
         <file>icons/questionmark_dark.png</file>
+        <file>icons/audio_light.png</file>
+        <file>icons/audio_dark.png</file>
+        <file>icons/difficulty_light.png</file>
+        <file>icons/difficulty_dark.png</file>
+        <file>icons/controls_light.png</file>
+        <file>icons/controls_dark.png</file>
+        <file>icons/visuals_light.png</file>
+        <file>icons/visuals_dark.png</file>
         <file>icons/menu_light.png</file>
         <file>icons/menu_dark.png</file>
         <file>icons/flag.png</file>
