--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -16,6 +16,8 @@
         <file>icons/controls_dark.png</file>
         <file>icons/visuals_light.png</file>
         <file>icons/visuals_dark.png</file>
+        <file>icons/keyboard_light.png</file>
+        <file>icons/keyboard_dark.png</file>
         <file>icons/menu_light.png</file>
         <file>icons/menu_dark.png</file>
         <file>icons/flag.png</file>
