--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -18,6 +18,8 @@
         <file>icons/visuals_dark.png</file>
         <file>icons/keyboard_light.png</file>
         <file>icons/keyboard_dark.png</file>
+        <file>icons/language_light.png</file>
+        <file>icons/language_dark.png</file>
         <file>icons/menu_light.png</file>
         <file>icons/menu_dark.png</file>
         <file>icons/flag.png</file>
