--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -1,9 +1,12 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/Main.qml</file>
-        <file>sounds/bomb.wav</file>
-        <file>sounds/click.wav</file>
-        <file>sounds/win.wav</file>
+        <file>sounds/pop_bomb.wav</file>
+        <file>sounds/pop_click.wav</file>
+        <file>sounds/pop_win.wav</file>
+        <file>sounds/w11_bomb.wav</file>
+        <file>sounds/w11_click.wav</file>
+        <file>sounds/w11_win.wav</file>
         <file>icons/bomb_light.png</file>
         <file>icons/bomb_dark.png</file>
         <file>icons/warning.png</file>
