--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -1,12 +1,15 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/Main.qml</file>
-        <file>sounds/pop_bomb.wav</file>
-        <file>sounds/pop_click.wav</file>
-        <file>sounds/pop_win.wav</file>
-        <file>sounds/w11_bomb.wav</file>
-        <file>sounds/w11_click.wav</file>
-        <file>sounds/w11_win.wav</file>
+        <file>sounds/pop/pop_bomb.wav</file>
+        <file>sounds/pop/pop_click.wav</file>
+        <file>sounds/pop/pop_win.wav</file>
+        <file>sounds/w11/w11_bomb.wav</file>
+        <file>sounds/w11/w11_click.wav</file>
+        <file>sounds/w11/w11_win.wav</file>
+        <file>sounds/kde-ocean/kde-ocean_bomb.wav</file>
+        <file>sounds/kde-ocean/kde-ocean_click.wav</file>
+        <file>sounds/kde-ocean/kde-ocean_win.wav</file>
         <file>icons/bomb_light.png</file>
         <file>icons/bomb_dark.png</file>
         <file>icons/warning.png</file>
