--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -28,8 +28,7 @@
         <file>icons/keyboard_dark.png</file>
         <file>icons/language_light.png</file>
         <file>icons/language_dark.png</file>
-        <file>icons/menu_light.png</file>
-        <file>icons/menu_dark.png</file>
+        <file>icons/menu.png</file>
         <file>icons/flag.png</file>
         <file>icons/flag_dark.png</file>
         <file>icons/icon.png</file>
