--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -17,6 +17,9 @@
         <file>sounds/kde-ocean/kde-ocean_bomb.wav</file>
         <file>sounds/kde-ocean/kde-ocean_click.wav</file>
         <file>sounds/kde-ocean/kde-ocean_win.wav</file>
+        <file>sounds/floraphonic/floraphonic_bomb.wav</file>
+        <file>sounds/floraphonic/floraphonic_click.wav</file>
+        <file>sounds/floraphonic/floraphonic_win.wav</file>
         <file>icons/bomb_light.png</file>
         <file>icons/bomb_dark.png</file>
         <file>icons/warning.png</file>
