--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -36,6 +36,7 @@
         <file>icons/menu.png</file>
         <file>icons/flag.png</file>
         <file>icons/flag_dark.png</file>
+        <file>icons/delete.png</file>
         <file>icons/icon.png</file>
         <file>icons/steam.png</file>
         <file>icons/github.png</file>
