add temporary scrollbar to better fit fluent dark theme, will remove them when qt implement proper ones

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -9,6 +9,7 @@
         <file>qml/ErrorWindow.qml</file>
         <file>qml/TopBar.qml</file>
         <file>qml/LeaderboardPage.qml</file>
+        <file>qml/TempScrollBar.qml</file>
         <file>sounds/pop/pop_bomb.wav</file>
         <file>sounds/pop/pop_click.wav</file>
         <file>sounds/pop/pop_win.wav</file>
