added accessibility pane with 3 color blindness correction

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -34,7 +34,7 @@
         <file>icons/visuals.png</file>
         <file>icons/keyboard.png</file>
         <file>icons/language.png</file>
-        <file>icons/menu.png</file>
+        <file>icons/accessibility.png</file>
         <file>icons/flag.png</file>
         <file>icons/flag_dark.png</file>
         <file>icons/delete.png</file>
