Moved seed related settings to advanced pane

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -36,6 +36,7 @@
         <file>icons/accessibility.png</file>
         <file>icons/flag.png</file>
         <file>icons/delete.png</file>
+        <file>icons/debug.png</file>
         <file>icons/icon.png</file>
         <file>icons/steam.png</file>
         <file>icons/github.png</file>
