--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -13,8 +13,10 @@
         <file>qml/WelcomePage.qml</file>
         <file>qml/CellFrame.qml</file>
         <file>qml/SidebarDelegate.qml</file>
+        <file>qml/MainWindow.qml</file>
         <file>qml/+Universal/CellFrame.qml</file>
         <file>qml/+Universal/SidebarDelegate.qml</file>
+        <file>qml/+Universal/MainWindow.qml</file>
         <file>qml/+Fusion/CellFrame.qml</file>
         <file>qml/+Fusion/SidebarDelegate.qml</file>
         <file>qml/+FluentWinUI3/CellFrame.qml</file>
