--- a/Resources/qml/qml.qrc
+++ b/Resources/qml/qml.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/qml">
         <file>Main.qml</file>
+        <file>Cell.qml</file>
         <file>SettingsPage.qml</file>
         <file>GameOverPopup.qml</file>
         <file>AboutPage.qml</file>
