--- a/Resources/qml/qml.qrc
+++ b/Resources/qml/qml.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/qml">
         <file>Main.qml</file>
         <file>Cell.qml</file>
+        <file>FlagToast.qml</file>
         <file>SettingsPage.qml</file>
         <file>GameOverPopup.qml</file>
         <file>AboutPage.qml</file>
