use standalone color component

--- a/Resources/qml/qml.qrc
+++ b/Resources/qml/qml.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/qml">
         <file>Main.qml</file>
+        <file>Colors.qml</file>
         <file>Retr0MineSettings.qml</file>
         <file>AudioEffectsEngine.qml</file>
         <file>Cell.qml</file>
