--- a/resources/icons/icons.qrc
+++ b/resources/icons/icons.qrc
@@ -22,5 +22,6 @@
         <file>info.png</file>
         <file>steam.png</file>
         <file>github.png</file>
+        <file>mail.png</file>
     </qresource>
 </RCC>
