removed invite check delay

--- a/resources/icons/icons.qrc
+++ b/resources/icons/icons.qrc
@@ -23,5 +23,6 @@
         <file>steam.png</file>
         <file>github.png</file>
         <file>mail.png</file>
+        <file>multiplayer.png</file>
     </qresource>
 </RCC>
