added signal button

--- a/resources/icons/icons.qrc
+++ b/resources/icons/icons.qrc
@@ -28,5 +28,6 @@
         <file>deny.png</file>
         <file>chat.png</file>
         <file>send.png</file>
+        <file>signal.png</file>
     </qresource>
 </RCC>
