auto resize window to fit chat, reintroduced menu icon to declutter topbar

--- a/resources/icons/icons.qrc
+++ b/resources/icons/icons.qrc
@@ -29,5 +29,6 @@
         <file>chat.png</file>
         <file>send.png</file>
         <file>signal.png</file>
+        <file>menu.png</file>
     </qresource>
 </RCC>
