added dark logo to show on white style

--- a/resources/images/images.qrc
+++ b/resources/images/images.qrc
@@ -3,5 +3,6 @@
         <file>chord.gif</file>
         <file>classic.gif</file>
         <file>retr0mine_logo.png</file>
+        <file>retr0mine_logo_dark.png</file>
     </qresource>
 </RCC>
