chat is available in singleplayer, added Retr0Mine_Bot to sent message in chat to explain hint reasoning to player

--- a/resources/images/images.qrc
+++ b/resources/images/images.qrc
@@ -4,5 +4,6 @@
         <file>classic.gif</file>
         <file>retr0mine_logo.png</file>
         <file>retr0mine_logo_dark.png</file>
+        <file>bot_avatar.png</file>
     </qresource>
 </RCC>
