--- a/resources/images/images.qrc
+++ b/resources/images/images.qrc
@@ -1,9 +1,11 @@
 <RCC>
     <qresource prefix="/images">
-        <file>chord.gif</file>
-        <file>classic.gif</file>
         <file>retr0mine_logo.png</file>
         <file>retr0mine_logo_dark.png</file>
         <file>bot_avatar.png</file>
+        <file>mouse_left_dark.png</file>
+        <file>mouse_left_light.png</file>
+        <file>mouse_right_dark.png</file>
+        <file>mouse_right_light.png</file>
     </qresource>
 </RCC>
