--- a/resources/cursors/cursors.qrc
+++ b/resources/cursors/cursors.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/cursors">
-        <file>cursor.png</file>
+        <file>breeze_light_48.png</file>
+        <file>breeze_dark_48.png</file>
+        <file>breeze_black_48.png</file>
     </qresource>
 </RCC>
