play empty wav file to prevent audio sleeping

--- a/resources/sounds/sounds.qrc
+++ b/resources/sounds/sounds.qrc
@@ -17,5 +17,6 @@
         <file>floraphonic/remoteClick.wav</file>
         <file>floraphonic/win.wav</file>
         <file>message_received.wav</file>
+        <file>empty.wav</file>
     </qresource>
 </RCC>
